@@ -2,7 +2,7 @@
 #define _FireGPGCall_h
 
 #include "IFireGPGCall.h"
-
+#include "IPCProcess.h"
 #define FIREGPG_CALL_CONTRACTID "@getfiregpg.org/XPCOM/FireGPGCall;1"
 #define FIREGPG_CALL_CLASSNAME "XpCOM to access to gpg (and pgp) for FireGPG"
 #define FIREGPG_CALL_CID {0xfa6b4f61, 0x5828, 0x4e15, \
@@ -21,7 +21,7 @@ private:
   ~FireGPGCall();
 
 protected:
-  /* additional members */ 
+  /* additional members */
 };
 
 #endif //_FireGPGCall_h
